--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import '../styles/global.css'
 import Header from './Header.astro'
 import Footer from './Footer.astro'
+import { base } from 'astro:config/client'
 
 const { title } = Astro.props
 ---
@@ -11,7 +12,7 @@ const { title } = Astro.props
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href={`${base}/favicon.svg`} />
 		<meta name="generator" content={Astro.generator} />
 		<title>{(title ? `${title} -- ` : '') + 'nikmolnar.com'}</title>
 	</head>
